monitoring/graphana-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: stackaero-prometheus-grafana-ingress
spec:
  rules:
  - host: grafana-prod.corp.stacklynx.com
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
        path: /
